apps/production/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: default
  labels:
    app.kubernetes.io/instance: grocy
    app.kubernetes.io/name: grocy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/instance: grocy
