apps/production/grocy/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: "local-siemons-it-nl"
spec:
  tls:
    - hosts:
        - grocy.local.siemons-it.nl
      secretName: local-siemons-it-nl-tls
  rules:
    - host: grocy.local.siemons-it.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
